# BasicExifReader

./: CMakeLists.txt
BasicEXIFReader/: APP0Marker.cpp  APP0Marker.h  BasicEXIFReaderMain.cpp  BasicEXIFReaderMain.h  BitUtils.cpp  BitUtils.h  CMakeLists.txt  EXIF.cpp  EXIF.h  EXIFParser.cxx  IFDEntry.cpp  IFDEntry.h  IFDTags.h  JPEGEXIFFile.cpp  JPEGEXIFFile.h  compileToWebAsm.bat
BasicEXIFReader/webtest/: app.js  package.json
BasicEXIFReader/webtest/public/: runTestExif.html  using_jexif.js
